name:                regex-fsm
author:              David Johnson
version:             0.1.0.0
license:             BSD3
synopsis:            Convert regular expressions to finite state machines
homepage:            https://github.com/GaloisInc/regex-fsm
category:            Language
maintainer:          david@galois.com
build-type:          Simple
license-file:        LICENSE
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md

executable regex-fsm
  main-is:
    Main.hs
  other-modules:
    Regex
    Regex.Closure,
    Regex.DFA,
    Regex.ENFA,
    Regex.MBP,
    Regex.Parse,
    Regex.Types
  build-depends:
    aeson,
    base < 5,
    boltzmann-samplers,
    bytestring,
    containers,
    data-default,
    matrix,
    mtl,
    optparse-generic,
    parsec,
    pretty-show,
    text
  hs-source-dirs:
    src, exe
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  ghc-options:
    -O2
  main-is:
    Main.hs
  hs-source-dirs:
    src, test
  build-depends:
    QuickCheck,
    aeson,
    base < 5,
    boltzmann-samplers,
    containers,
    data-default,
    hspec,
    matrix,
    mtl,
    parsec,
    pretty-show,
    quickcheck-instances,
    text
  other-modules:
    Regex
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GaloisInc/regex-fsm
