name:                regex-fsm
author:              David Johnson
version:             0.1.0.0
license:             BSD3
synopsis:            Convert regular expressions to finite state machines
homepage:            https://github.com/GaloisInc/regex-fsm
category:            Language
maintainer:          david@galois.com
build-type:          Simple
license-file:        LICENSE
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md

executable regex-fsm
  main-is:
    Main.hs
  other-modules:
    Regex
    Regex.Closure,
    Regex.DFA,
    Regex.ENFA,
    Regex.MBP,
    Regex.Parse,
    Regex.Types
  build-depends:
    aeson >=1.1 && <1.3,
    base >=4.8 && <4.10,
    boltzmann-samplers >=0.1 && <0.2,
    bytestring >=0.10 && <0.11,
    containers >=0.5 && <0.6,
    data-default >=0.7 && <0.8,
    matrix >=0.3 && <0.4,
    mtl >=2.2 && <2.3,
    optparse-generic >=1.2 && <1.3,
    parsec >=3.1 && <3.2,
    pretty-show >=1.6 && <1.7,
    text >=1.2 && <1.3,
    unordered-containers >=0.2 && <0.3
  hs-source-dirs:
    src, exe
  default-language:
    Haskell2010

executable json2ntl
  main-is:
    json2ntl.hs
  other-modules:
    Regex.Types
  build-depends:
    aeson >=1.1 && <1.3,
    base >=4.8 && <4.10,
    bytestring >=0.10 && <0.11,
    containers >=0.5 && <0.6,
    data-default >=0.7 && <0.8,
    matrix >=0.3 && <0.4,
    mtl >=2.2 && <2.3,
    text >=1.2 && <1.3,
    unordered-containers >=0.2 && <0.3
  hs-source-dirs:
    src, exe
  default-language:
    Haskell2010

test-suite tests
  type:
    exitcode-stdio-1.0
  ghc-options:
    -O2
  main-is:
    Main.hs
  hs-source-dirs:
    src, test
  build-depends:
    QuickCheck >=2.9 && <2.10,
    aeson >=1.1 && <1.3,
    base >=4.8 && <4.10,
    boltzmann-samplers >=0.1 && <0.2,
    containers >=0.5 && <0.6,
    data-default >=0.7 && <0.8,
    hspec >=2.4 && <2.5,
    matrix >=0.3 && <0.4,
    mtl >=2.2 && <2.3,
    parsec >=3.1 && <3.2,
    pretty-show >=1.6 && <1.7,
    quickcheck-instances >=0.3 && <0.4,
    text >=1.2 && <1.3,
    unordered-containers >=0.2 && <0.3
  other-modules:
    Regex
  default-language:
    Haskell2010

source-repository head
  type:     git
  location: https://github.com/GaloisInc/regex-fsm
