name:                regex-fsm
author:              David Johnson, Daniel Wagner
version:             0.1.0.0
license:             BSD3
synopsis:            Convert regular expressions to matrix branching programs
homepage:            https://github.com/GaloisInc/regex-fsm
category:            Language
maintainer:          david@galois.com
build-type:          Simple
license-file:        LICENSE
cabal-version:       >=1.10
extra-source-files:  ChangeLog.md

flag obfuscator-tests
  description: Run tests with obfuscator on PATH
  default: False
  manual: False

executable regex-fsm
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:
      -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
    other-modules:
      Regex
      Regex.Closure,
      Regex.DFA,
      Regex.ENFA,
      Regex.MBP,
      Regex.Parse,
      Regex.Types
    build-depends:
      aeson,
      base >=4.8 && <4.10,
      bytestring >=0.10 && <0.11,
      containers >=0.5 && <0.6,
      criterion,
      hspec,
      data-default >=0.7 && <0.8,
      deepseq,
      matrix >=0.3 && <0.4,
      mtl >=2.2 && <2.3,
      optparse-generic >=1.2 && <1.3,
      parsec >=3.1 && <3.2,
      pretty-show >=1.6 && <1.7,
      split >= 0.2 && < 0.3,
      text >=1.2 && <1.3,
      unordered-containers >=0.2 && <0.3
    hs-source-dirs:
      src, exe
    default-language:
      Haskell2010

executable json2ntl
  main-is:
    json2ntl.hs
  if impl(ghcjs)
    buildable: False
  else
   ghc-options:
    -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
   other-modules:
    Regex.Types
   build-depends:
    aeson,
    base >=4.8 && <4.10,
    bytestring >=0.10 && <0.11,
    containers >=0.5 && <0.6,
    data-default >=0.7 && <0.8,
    deepseq,
    matrix >=0.3 && <0.4,
    mtl >=2.2 && <2.3,
    split >= 0.2 && < 0.3,
    text >=1.2 && <1.3,
    unordered-containers >=0.2 && <0.3
   hs-source-dirs:
    src, exe
   default-language:
    Haskell2010

test-suite tests
  main-is:
    Main.hs
  type:
    exitcode-stdio-1.0
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:
      -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
    hs-source-dirs:
      src, test
    build-depends:
      aeson,
      base >=4.8 && <4.10,
      bytestring,
      containers >=0.5 && <0.6,
      criterion,
      data-default >=0.7 && <0.8,
      deepseq,
      directory,
      hspec >=2.4 && <2.5,
      matrix >=0.3 && <0.4,
      mtl >=2.2 && <2.3,
      parsec >=3.1 && <3.2,
      pretty-show >=1.6 && <1.7,
      process >=1.4 && <1.7,
      quickcheck-instances >=0.3 && <0.4,
      split >= 0.2 && < 0.3,
      text >=1.2 && <1.3,
      unordered-containers >=0.2 && <0.3
    other-modules:
      Regex
    default-language:
      Haskell2010

executable obfuscator-tests
  main-is:
    Obfuscator.hs
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:
      -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
    hs-source-dirs:
      src, test
    build-depends:
      aeson,
      base >=4.8 && <4.10,
      bytestring,
      containers >=0.5 && <0.6,
      criterion,
      data-default >=0.7 && <0.8,
      hspec,
      quickcheck-instances,
      deepseq,
      directory,
      matrix >=0.3 && <0.4,
      mtl >=2.2 && <2.3,
      optparse-generic >=1.2 && <1.3,
      parsec >=3.1 && <3.2,
      pretty-show >=1.6 && <1.7,
      process >=1.4 && <1.7,
      random,
      split >= 0.2 && < 0.3,
      text >=1.2 && <1.3,
      unordered-containers >=0.2 && <0.3
    other-modules:
      Regex
    default-language:
      Haskell2010

source-repository head
  type:     git
  location: https://github.com/GaloisInc/regex-fsm

executable benchmarks
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:
      -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
    hs-source-dirs:
      src, bench
    default-language:
      Haskell2010
    other-modules:
      Regex
      Regex.Closure,
      Regex.DFA,
      Regex.ENFA,
      Regex.MBP,
      Regex.Parse,
      Regex.Types
    build-depends:
      aeson,
      base >=4.8 && <4.10,
      containers,
      deepseq,
      split,
      criterion,
      matrix,
      mtl >=2.2 && <2.3,
      parsec,
      unordered-containers >=0.2 && <0.3,
      text

executable regex-web
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    hs-source-dirs:
      web, src
    other-modules:
      Regex
      Regex.Closure,
      Regex.DFA,
      Regex.ENFA,
      Regex.MBP,
      Regex.Parse,
      Regex.Types
    build-depends:
      aeson,
      base,
      containers,
      miso
    default-language:
      Haskell2010